@@ -1,6 +1,8 @@
 2012-03-13  6.7.6-1 Cristy  <quetzlzacatenango@image...>
   * Use uint32 pointer for ReadStripMethod in coders/tiff.c (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=20526).
+  * Ghostscript 32/64 bit detection patch (contributed by
+    axeld@pinc-...).
 
 2012-03-10  6.7.6-0 Cristy  <quetzlzacatenango@image...>
   * New version 6.7.6-0, SVN revision 7090.
